[Fix] - + keeping the state of collapsed tags         + add scroll to the page body         + fix " collapse all " when you manually collapse pure

--- a/RR-Front/src/app/workspace/containers/workspace-calibration/workspace-calibration.component.scss
+++ b/RR-Front/src/app/workspace/containers/workspace-calibration/workspace-calibration.component.scss
@@ -143,7 +143,7 @@
 
 :host {
   width: 100%;
-  height: calc(100vh - 200px);
+  min-height: 100vh;
   display: flex;
   background-color: #F4F6FC;
 
@@ -1843,4 +1843,11 @@ body .ui-table .ui-table-thead > tr > th {
 
 ::ng-deep.ui-g-1, .ui-g-2, .ui-g-3, .ui-g-4, .ui-g-5, .ui-g-6, .ui-g-7, .ui-g-8, .ui-g-9, .ui-g-10, .ui-g-11, .ui-g-12 {
   padding: 1.5em !important;
+}
+
+::ng-deep.Tags-content {
+  display: flex;
+  flex-flow: column;
+  overflow: auto;
+  min-width: unset !important;
 }
